--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,16 @@
 {
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
+    "baseUrl": ".",
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "paths": {
+      "@components/*": [
+        "src/Views/components/*"
+      ],
+      "@hooks/*": [
+        "src/Controllers/hooks/*"
+      ]
+    }
   }
 }
