--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@nanostores/react": "^0.7.1",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.1.2",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "nanostores": "^0.9.5",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.1",
     "react": "^18.2.0",
