--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
       ],
       "@hooks/*": [
         "src/Controllers/hooks/*"
+      ],
+      "@Icons/*": [
+        "src/assets/svg/*"
       ]
     }
   }
