--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.1.2",
+    "firebase": "^10.7.2",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "nanostores": "^0.9.5",
@@ -23,7 +24,8 @@
     "primereact": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vaul": "^0.8.9"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
