--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "primereact": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "tailwindcss": "^3.4.1",
     "vaul": "^0.8.9"
   },
