--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "nanostores": "^0.9.5",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-router": "^6.22.1",
+    "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1",
     "vaul": "^0.8.9"
   },
   "devDependencies": {
+    "daisyui": "^4.7.2",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-astro": "^0.31.0",
