--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nanostores": "^0.9.5",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.1",
-    "quill": "^1.3.7",
+    "quill": "^2.0.0-rc.2",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
