Modificacion de estructura de componentes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "@hooks/*": [
         "src/Controllers/hooks/*"
       ],
-      "@Icons/*": [
+      "@icons/*": [
         "src/assets/svg/*"
       ]
     }
