Control de contraseñas en registro de usuario e implementación de calendario de citas para pacientes

--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "firebase": "^10.6.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "globalize": "^1.7.0",
+    "globalize-compiler": "^1.1.1",
     "nanostores": "^0.9.5",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.1",
     "quill": "^2.0.0-rc.2",
     "quill-delta-to-html": "^0.12.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router": "^6.22.1",
