--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.2",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.49.3",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.3",
